<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.comp4521_quiz_app.quiz_activity.AddQuestionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/QuestionCategorySpinner"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:contentDescription="@string/question_category"

            app:layout_constraintBottom_toTopOf="@+id/QuestionTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/AddQuestionTextView" />

        <TextView
            android:id="@+id/AddQuestionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_question"
            android:textColor="@color/temp"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/QuestionCategorySpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/QuestionTextField"
            android:layout_width="255dp"
            android:layout_height="83dp"
            android:ems="10"
            android:hint="@string/question"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="6"
            android:maxLines="10"
            android:minHeight="48dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/Option1Field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/QuestionCategorySpinner"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textColor="@color/temp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/QuestionTextField"
            app:layout_constraintEnd_toStartOf="@+id/QuestionTextField"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/QuestionTextField" />

        <EditText
            android:id="@+id/Option1Field"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/option_1"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/Option2Field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/QuestionTextField"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option1"
            android:textColor="@color/temp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/Option1Field"
            app:layout_constraintEnd_toStartOf="@+id/Option1Field"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Option1Field" />

        <EditText
            android:id="@+id/Option2Field"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/option_2"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/Option3Field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/Option1Field"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/Option3Field"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/option_3"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/Option4Field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/Option2Field"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/Option4Field"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/option_4"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/CorrectOptionSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/Option3Field"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <Spinner
            android:id="@+id/CorrectOptionSpinner"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:contentDescription="@string/correct_option_select"
            app:layout_constraintBottom_toTopOf="@+id/SelectPhotoButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/Option4Field" />

        <Button
            android:id="@+id/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/SubmitButton"
            app:layout_constraintTop_toBottomOf="@+id/SelectPhotoButton" />

        <Button
            android:id="@+id/SubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="@+id/BackButton"
            app:layout_constraintEnd_toStartOf="@+id/BackButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/BackButton" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/temp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/QuestionCategorySpinner"
            app:layout_constraintEnd_toStartOf="@+id/QuestionCategorySpinner"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/QuestionCategorySpinner" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option3"
            android:textColor="@color/temp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/Option3Field"
            app:layout_constraintEnd_toStartOf="@+id/Option3Field"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Option3Field" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_option"
            android:textColor="@color/temp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/CorrectOptionSpinner"
            app:layout_constraintEnd_toStartOf="@+id/CorrectOptionSpinner"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/CorrectOptionSpinner" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option4"
            android:textColor="@color/temp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/Option4Field"
            app:layout_constraintEnd_toStartOf="@+id/Option4Field"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Option4Field" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option2"
            android:textColor="@color/temp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/Option2Field"
            app:layout_constraintEnd_toStartOf="@+id/Option2Field"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Option2Field" />

        <TextView
            android:id="@+id/filePathTextView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_file_selected"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/SelectPhotoButton"
            app:layout_constraintEnd_toStartOf="@+id/SelectPhotoButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/SelectPhotoButton" />

        <Button
            android:id="@+id/SelectPhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="#eeeeee"
            android:backgroundTint="#eeeeee"
            android:color="#eeeeee"
            android:text="@string/add_photo"
            app:layout_constraintBottom_toTopOf="@+id/BackButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/filePathTextView"
            app:layout_constraintTop_toBottomOf="@+id/CorrectOptionSpinner"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>