...
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_festival"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/OptionAButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/QuestionTextView" />

        <Button
            android:id="@+id/OptionAButton"
...
